fixing contrast issue

--- a/ranch-start/css/small.css
+++ b/ranch-start/css/small.css
@@ -43,7 +43,7 @@ main {
     display: block;
 }
 
-main h1 {color: #17a8e4;}
+main h1 {color: #0077aa;}
 
 main figure img {width: 100%;}
 main figure {
